Closed
Bug 1802977
Opened 3 years ago
Closed 3 years ago
Crash in [@ nsWindow::Destroy]
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
109 Branch
People
(Reporter: aosmond, Assigned: stransky)
References
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
Crash report: https://crash-stats.mozilla.org/report/index/8fd77808-9f39-40ed-8713-68c270221126
MOZ_CRASH Reason: MOZ_DIAGNOSTIC_ASSERT(NS_IsMainThread())
Top 10 frames of crashing thread:
0 libxul.so nsWindow::Destroy widget/gtk/nsWindow.cpp:581
1 libxul.so nsWindow::~nsWindow widget/gtk/nsWindow.cpp:456
2 libxul.so nsWindow::~nsWindow widget/gtk/nsWindow.cpp:450
3 libxul.so nsBaseWidget::Release widget/nsBaseWidget.cpp:132
4 libxul.so mozilla::RefPtrTraits<nsWindow>::Release mfbt/RefPtr.h:50
4 libxul.so RefPtr<nsWindow>::ConstRemovingRefPtrTraits<nsWindow>::Release mfbt/RefPtr.h:381
4 libxul.so RefPtr<nsWindow>::~RefPtr mfbt/RefPtr.h:81
4 libxul.so mozilla::widget::GtkCompositorWidget::~GtkCompositorWidget widget/gtk/GtkCompositorWidget.cpp:72
5 libxul.so mozilla::widget::InProcessGtkCompositorWidget::~InProcessGtkCompositorWidget widget/gtk/InProcessGtkCompositorWidget.h:16
6 libxul.so mozilla::widget::CompositorWidget::Release widget/CompositorWidget.h:90
| Reporter | ||
Comment 1•3 years ago
|
||
We added a check in bug 1750513 to ensure we are not freeing nsWindow off the main thread, but we do on the compositor thread.
| Reporter | ||
Comment 2•3 years ago
|
||
Is this just as simple as adding a NS_ReleaseOnMainThread call for mWidget?
https://searchfox.org/mozilla-central/rev/77a39e7595198fd30b57550749c15761d30314fb/widget/gtk/GtkCompositorWidget.cpp#69
Flags: needinfo?(stransky)
| Assignee | ||
Comment 3•3 years ago
|
||
(In reply to Andrew Osmond [:aosmond] (he/him) from comment #2)
Is this just as simple as adding a
NS_ReleaseOnMainThreadcall formWidget?
Looks like so, Thanks.
Flags: needinfo?(stransky)
| Assignee | ||
Comment 4•3 years ago
|
||
Updated•3 years ago
|
Assignee: nobody → stransky
Status: NEW → ASSIGNED
Pushed by stransky@redhat.com:
https://hg.mozilla.org/integration/autoland/rev/9b463a0b6bfa
[Linux] Release nsWindow referenced by GtkCompositorWidget from main thread by NS_ReleaseOnMainThread() r=aosmond
Comment 6•3 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
status-firefox109:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 109 Branch
Updated•3 years ago
|
status-firefox107:
--- → wontfix
status-firefox108:
--- → wontfix
status-firefox-esr102:
--- → wontfix
You need to log in
before you can comment on or make changes to this bug.
Description
•