Bug 1802977 [Linux] Release nsWindow referenced by GtkCompositorWidget from main thread by NS_ReleaseOnMainThread() r=aosmond

Differential Revision: https://phabricator.services.mozilla.com/D163330